feat(db): add vaccines table, schema, docker config, and validation integration